Source/WebKit/WebProcess/WebPage/WebInspector.h
@@ -92,9 +92,12 @@ private:
 
     void bringToFront();
 
+    void whenFrontendConnectionEstablished(Function<void()>&&);
+
     WebPage* m_page;
 
     RefPtr<IPC::Connection> m_frontendConnection;
+    Vector<Function<void()>> m_frontendConnectionActions;
 
     bool m_attached { false };
     bool m_previousCanAttach { false };
